[gd_scene load_steps=9 format=3 uid="uid://fa4k4y0vjdds"]

[ext_resource type="Script" uid="uid://codcc4ug6fliq" path="res://levels/maze_test.gd" id="1_xnviq"]
[ext_resource type="Material" uid="uid://72qpaeos0n2n" path="res://materials/floor_dark1.tres" id="2_alhll"]
[ext_resource type="PackedScene" uid="uid://bsw1jkrbaf653" path="res://sound/bgm.tscn" id="4_yalib"]

[sub_resource type="PlaneMesh" id="PlaneMesh_opxe0"]
size = Vector2(1200, 1200)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ne5nj"]
sky_horizon_color = Color(0.59625, 0.6135, 0.653186, 1)
ground_bottom_color = Color(0, 0, 0.0627451, 1)
ground_horizon_color = Color(0.59625, 0.6135, 0.653186, 1)

[sub_resource type="Sky" id="Sky_8uoks"]
sky_material = SubResource("ProceduralSkyMaterial_ne5nj")

[sub_resource type="Environment" id="Environment_g42aa"]
background_mode = 2
background_energy_multiplier = 0.01
sky = SubResource("Sky_8uoks")
ambient_light_source = 2
ambient_light_color = Color(0, 0.0705882, 0.227451, 1)
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_05i0m"]
size = Vector3(5000, 100, 5000)

[node name="MazeTest" type="Node3D"]
script = ExtResource("1_xnviq")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D"]
mesh = SubResource("PlaneMesh_opxe0")
surface_material_override/0 = ExtResource("2_alhll")

[node name="FloorLight" type="Timer" parent="."]
autostart = true

[node name="CameraTwist" type="Node3D" parent="."]

[node name="CameraPitch" type="Node3D" parent="CameraTwist"]

[node name="IntroCam" type="Camera3D" parent="CameraTwist/CameraPitch"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 199.197, 675.758)
current = true
fov = 50.0

[node name="SetDressin" type="Node3D" parent="."]
transform = Transform3D(78.9063, 0, -61.4313, 0, 100, 0, 61.4313, 0, 78.9063, -142.92, 41.5013, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="SetDressin"]
environment = SubResource("Environment_g42aa")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SetDressin"]
transform = Transform3D(-0.990505, 0.119058, -0.0687377, 0, 0.499998, 0.866026, 0.137476, 0.857804, -0.495251, 1.18197, 0.796057, -0.920207)
light_color = Color(0.858824, 0.882353, 1, 1)
light_energy = 0.384
shadow_enabled = true

[node name="Trails" type="Node3D" parent="."]

[node name="Spawns" type="Node3D" parent="."]

[node name="Players" type="Node3D" parent="Spawns"]

[node name="Enemies" type="Node3D" parent="Spawns"]

[node name="Allies" type="Node3D" parent="Spawns"]

[node name="PlayerTanks" type="Node3D" parent="Spawns"]

[node name="PlayerSpawn" type="Node3D" parent="Spawns/PlayerTanks"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.5, -228.653)

[node name="SpawnCam" type="Camera3D" parent="Spawns/PlayerTanks/PlayerSpawn"]
transform = Transform3D(-0.675462, -0.0977421, 0.730889, 0, 0.991176, 0.132551, -0.737395, 0.0895327, -0.669501, 5.736, 2.6, -5.649)

[node name="EnemyTanks" type="Node3D" parent="Spawns"]

[node name="EnemySpawn" type="Node3D" parent="Spawns/EnemyTanks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.32, 0.5, -19.473)

[node name="AllyTanks" type="Node3D" parent="Spawns"]

[node name="SOS" parent="." instance=ExtResource("4_yalib")]
volume_db = -22.0
pitch_scale = 0.68
autoplay = false

[node name="Boxes" type="Node3D" parent="."]

[node name="ExplodeBox" type="Area3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -20.0609, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boxes/ExplodeBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -168.668, 0)
shape = SubResource("BoxShape3D_05i0m")

[node name="DespawnBox" type="Area3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -566.392, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boxes/DespawnBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -100, 0)
shape = SubResource("BoxShape3D_05i0m")

[connection signal="body_entered" from="Boxes/ExplodeBox" to="." method="_on_kill_box_body_entered"]
[connection signal="body_entered" from="Boxes/DespawnBox" to="." method="_on_despawn_box_body_entered"]
